[gd_scene load_steps=2 format=3 uid="uid://rjalhsmiych4"]

[ext_resource type="Script" path="res://UI/CourseStage.gd" id="1_6f5s3"]

[node name="CourseStage" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = -18.0
offset_bottom = -18.0
script = ExtResource("1_6f5s3")

[node name="StageNum" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_right = 8.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1

[node name="StageType" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -25.0
offset_right = 47.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Area Control"
horizontal_alignment = 1

[node name="Selected" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 29.0
offset_right = 20.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "^"
horizontal_alignment = 1
